--- a/Boo 4IDIP/style.css
+++ b/Boo 4IDIP/style.css
@@ -1,19 +1,37 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 header {
-    /* border: 3px yellow solid; */
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+  /*border: 3px yellow solid;
+  margin: 1;
+  padding: 0;
+  display: flex;*/
+  flex-direction: row;
+  justify-content: flex-end;
+  background-color: #00a6fb;
+  align-items: baseline;
+  gap: 10px;
 }
 
-ul{
-    display: flex;
-    flex-direction: row;
-
+section1 {
+  background-image: "picture/Mainpagebackground1.png";
 }
-img {
+ul {
+  display: flex;
+  flex-direction: row;
+}
+/*img {
     width: 100px;
+}*/
+
+body {
+  background-color: #333745;
 }
 
-body{
-    background-color: #333745;
+.exmarks {
+  font-family: Karantina;
+  font-size: 6rem;
 }
