--- a/Boo 4IDIP/style.css
+++ b/Boo 4IDIP/style.css
@@ -1,34 +1,32 @@
+/* border: 3px solid white; */
+
+.container {
+  max-width: 1250px;
+  margin: 0 auto;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-header {
-  /*border: 3px yellow solid;
-  margin: 1;
-  padding: 0;
-  display: flex;*/
-  flex-direction: row;
-  justify-content: flex-end;
-  background-color: #00a6fb;
-  align-items: baseline;
-  gap: 10px;
-}
-
-section1 {
-  background-image: "picture/Mainpagebackground1.png";
-}
-ul {
-  display: flex;
-  flex-direction: row;
-}
-/*img {
-    width: 100px;
-}*/
-
 body {
   background-color: #333745;
+}
+
+header {
+  background-color: #00a6fb;
+}
+
+header > .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header a {
+  border: 3px solid white;
 }
 
 .exmarks {
