--- a/Boo 4IDIP/style.css
+++ b/Boo 4IDIP/style.css
@@ -5,11 +5,11 @@
   margin: 0 auto;
 }
 
-* {
+/* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
+}*/
 
 body {
   background-color: #333745;
@@ -29,7 +29,77 @@ header a {
   border: 3px solid white;
 }
 
+.hero-image {
+  background-image: url("Overall_background.png"); /* The image used */
+  background-position: center; /* Center the image */
+  background-repeat: repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
+}
+
+.section-one {
+  background-image: url("picture/Mainpagebackground1.png");
+  background-position: center;
+  background-repeat: repeat;
+  background-size: cover;
+  max-width: 1250px;
+  margin: 0 auto;
+}
+
+.section-two {
+  background-image: url("picture/Overall_background.png");
+  background-position: center;
+  background-repeat: repeat;
+  background-size: cover;
+  max-width: 1250px;
+  max-width: 1250px;
+  margin: 0 auto;
+}
+
+.Most_popular {
+  background-image: url("picture/Overall_background.png");
+  background-position: center;
+  background-repeat: repeat;
+  background-size: cover;
+  max-width: 1250px;
+  max-width: 1250px;
+  margin: 0 auto;
+}
+
+.Top_seller {
+  background-image: url("picture/Overall_background.png");
+  background-position: center;
+  background-repeat: repeat;
+  background-size: cover;
+  max-width: 1250px;
+  max-width: 1250px;
+  margin: 0 auto;
+}
+
+.Promotion {
+  background-image: url("picture/Overall_background.png");
+  background-position: center;
+  background-repeat: repeat;
+  background-size: cover;
+  max-width: 1250px;
+  max-width: 1250px;
+  margin: 0 auto;
+}
+
 .exmarks {
   font-family: Karantina;
   font-size: 6rem;
 }
+
+/*.image1 {
+  position: absolute;
+  top: ;
+  left: ;
+  border: 1px solid #000000;
+}
+.image2 {
+  position: relative;
+  top: 487px;
+  left: 0px;
+  border: 1px solid #000000;
+  width: ;
+}*/
