--- a/Boo 4IDIP/style.css
+++ b/Boo 4IDIP/style.css
@@ -5,11 +5,11 @@
   margin: 0 auto;
 }
 
-/* {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}*/
+}
 
 body {
   background-color: #333745;
@@ -26,7 +26,14 @@ header > .container {
 }
 
 header a {
-  border: 3px solid white;
+  background-color: #fffff0;
+  padding: 5px 10px;
+  /* border-radius: 30px; */
+}
+
+.main-logo {
+  width: 200px;
+  margin-bottom: -100px;
 }
 
 .hero-image {
@@ -43,10 +50,43 @@ header a {
   background-size: cover;
   max-width: 1250px;
   margin: 0 auto;
+  border: 4px;
+  border-style: solid;
+}
+.section-one > h1 {
+  border: 4px;
+  border-style: solid;
+  margin-top: 100px;
 }
 
 .section-two {
-  background-image: url("picture/Overall_background.png");
+  background-image: url("picture/Background picture/Overall_background.png");
+  background-position: center;
+  background-repeat: repeat;
+  background-size: cover;
+  max-width: 1250px;
+  max-width: 1250px;
+  margin: 0 auto;
+  border: 4px;
+  border-style: solid;
+  border-color: red;
+}
+
+.most_popular {
+  background-image: url("picture/Background picture/Overall_background.png");
+  background-position: center;
+  background-repeat: repeat;
+  background-size: cover;
+  max-width: 1250px;
+  max-width: 1250px;
+  margin: 0 auto;
+  border: 4px;
+  border-style: solid;
+  border-color: red;
+}
+
+.top_seller {
+  background-image: url("picture/Background picture/Overall_background.png");
   background-position: center;
   background-repeat: repeat;
   background-size: cover;
@@ -55,8 +95,8 @@ header a {
   margin: 0 auto;
 }
 
-.Most_popular {
-  background-image: url("picture/Overall_background.png");
+.promotion {
+  background-image: url("picture/Background picture/Overall_background.png");
   background-position: center;
   background-repeat: repeat;
   background-size: cover;
@@ -65,24 +105,8 @@ header a {
   margin: 0 auto;
 }
 
-.Top_seller {
-  background-image: url("picture/Overall_background.png");
-  background-position: center;
-  background-repeat: repeat;
-  background-size: cover;
-  max-width: 1250px;
-  max-width: 1250px;
-  margin: 0 auto;
-}
-
-.Promotion {
-  background-image: url("picture/Overall_background.png");
-  background-position: center;
-  background-repeat: repeat;
-  background-size: cover;
-  max-width: 1250px;
-  max-width: 1250px;
-  margin: 0 auto;
+footer {
+  background-color: #0542c7;
 }
 
 .exmarks {
