--- a/Boo 4IDIP/style.css
+++ b/Boo 4IDIP/style.css
@@ -1,37 +1,37 @@
 /* border: 3px solid white; */
 
 .container {
-    max-width: 1250px;
-    margin: 0 auto;
-  }
-  
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-    background-color: #333745;
-  }
-  
-  header {
-    background-color: #00a6fb;
-  }
-  
-  header > .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  header a {
+  max-width: 1250px;
+  margin: 0 auto;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #333745;
+}
+
+header {
+  background-color: #00a6fb;
+}
+
+header > .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header a {
   background-color: #fffff0;
   list-style: none;
   padding: 5px 15px;
   margin: 5px 5px;
   /* border-radius: 30px; */
-  }
+}
 
 .first-ul {
   padding: 20px;
@@ -40,15 +40,12 @@
 .second-ul {
   padding-left: 130px;
 }
-  
+
 .main-logo {
   width: 200px;
   margin-bottom: -100px;
   position: center;
 }
-
-
-
 
 .hero-image {
   background-image: url("Overall_background.png"); /* The image used */
@@ -59,7 +56,6 @@
 
 /* <---------------End header--------------> */
 
-
 .section-one {
   background-image: url("picture/Mainpagebackground1.png");
   background-position: center;
@@ -69,7 +65,7 @@
   margin: 0 auto;
   text-align: center;
   /* border: 4px;
-  border-style: solid; */
+border-style: solid; */
   padding-top: 150px;
   padding-bottom: 50px;
 }
@@ -78,24 +74,29 @@
   background: rgba(209, 209, 209, 0.685);
 }
 
-.wh > h1{
+.wh > h1 {
   padding-bottom: 20px;
 }
 
-.section-one > h3{
+.section-one > h3 {
   margin: auto 150px;
 }
 
-.st{
-  background-color: #BFDB38;
+.st {
+  background-color: rgb(255, 255, 255);
   border-radius: 30px;
   margin: 50px 550px;
+  cursor: pointer;
+  transition: 0.1s;
+}
+.st:hover {
+  background-color: rgba(255, 255, 255, 0.685);
 }
 
 /* <---------------End Section1--------------> */
 
-.infomation{ 
-  background-image: url("Picture/Overall background.png");
+.infomation {
+  background-image: url("picture/Background picture/Overall_background.png");
   /* background-position: center; */
   background-repeat: repeat;
   background-size: cover;
@@ -103,20 +104,20 @@
   max-width: 1250px;
   margin: 0 auto;
   /* border: 4px;
-  border-style: solid;
-  border-color: red; */
+border-style: solid;
+border-color: red; */
 }
 
-.image2{
+.image2 {
   display: block;
   margin-left: auto;
   margin-right: auto;
   /* border: 4px;
-  border-style: solid;
-  border-color: red; */
+border-style: solid;
+border-color: red; */
 }
 
-.info-text{
+.info-text {
   text-align: center;
   background: rgba(255, 255, 255, 0.685);
   margin: auto 450px;
@@ -125,19 +126,17 @@
   position: relative;
   top: -191px;
   left: 191px;
-
 }
 
-.info-text > h4{
-    margin-top: 10px;
-    margin-bottom: 10px;
+.info-text > h4 {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
-
 
 /* <---------------End Infomation--------------> */
-  
+
 .most_popular {
-  background-image: url("Picture/Overall background.png");
+  background-image: url("picture/Background picture/Overall_background.png");
   /* background-position: center; */
   background-repeat: repeat;
   background-size: cover;
@@ -145,18 +144,18 @@
   max-width: 1250px;
   margin: 0 auto;
   /* border: 4px;
-  border-style: solid;
-  border-color: red; */
+border-style: solid;
+border-color: red; */
 }
 
 .popular {
   text-align: center;
-  background-color: #BFDB38;
+  background-color: #bfdb38;
   border: 2px;
   border-style: solid;
   border-color: black;
   border-radius: 15px;
-  margin: auto 100px;  
+  margin: auto 100px;
   margin-top: -150px;
   margin-bottom: 50px;
   padding: 10px;
@@ -171,34 +170,34 @@
   background-color: #414555;
 }
 
-.mp-text1{
+.mp-text1 {
   background-color: #635985;
   padding: 1px 336px;
   /* border: 1px;
-  border-style: solid; */
+border-style: solid; */
 }
-.mp-text1 > h3{
+.mp-text1 > h3 {
   padding-top: 30px;
   /* border: 1px;
-  border-style: solid; */
+border-style: solid; */
 }
 
 .chat1 {
-  background-color: #1F8A70;
+  background-color: #1f8a70;
   text-align: start;
-  padding-top: 30px ;
+  padding-top: 30px;
   padding-bottom: 30px;
   /* border: 3px;
-  border-style: solid; */
+border-style: solid; */
 }
 
-.chat1 > h2{
+.chat1 > h2 {
   text-align: center;
 }
 
-.chat-popular1{
+.chat-popular1 {
   /* border: 3px;
-  border-style: solid; */
+border-style: solid; */
   padding-left: 5px;
 }
 
@@ -210,42 +209,41 @@
   background-color: #414555;
 }
 
-.mp-text2{
+.mp-text2 {
   background-color: #635985;
   padding: 1px 297px;
   /* border: 1px;
-  border-style: solid; */
+border-style: solid; */
 }
-.mp-text2 > h3{
+.mp-text2 > h3 {
   padding-top: 30px;
   /* border: 1px;
-  border-style: solid; */
+border-style: solid; */
 }
 
 .chat2 {
-  background-color: #1F8A70;
+  background-color: #1f8a70;
   text-align: start;
-  padding-top: 50px ;
+  padding-top: 50px;
   padding-bottom: 50px;
   /* border: 3px;
-  border-style: solid; */
+border-style: solid; */
 }
 
-.chat2 > h2{
+.chat2 > h2 {
   text-align: center;
 }
 
 .chat-popular2 {
   border: 3px;
   border-style: solid;
-  padding-left:
+  /* padding-left: ; */
 }
 
-  /* <---------------End Most popular--------------> */
-
+/* <---------------End Most popular--------------> */
 
 .top_seller {
-  background-image: url("Picture/Overall background.png");
+  background-image: url("picture/Background picture/Overall_background.png");
   background-position: center;
   background-repeat: repeat;
   background-size: cover;
@@ -256,17 +254,16 @@
   border: 3px;
   border-style: solid;
   border-color: white;
-  margin-bottom: ;
 }
 
 .top_seller > h3 {
   text-align: center;
-  background-color: #BFDB38;
+  background-color: #bfdb38;
   border: 2px;
   border-style: solid;
   border-color: black;
   border-radius: 15px;
-  margin: auto 100px;  
+  margin: auto 100px;
   margin-top: 50px;
   margin-bottom: 50px;
   padding: 10px;
@@ -274,19 +271,26 @@
 
 .main-info-for-tp {
   background-color: #333745;
-  border: 3px;
-  border-style: solid;
+  /* border: 3px;
+  border-style: solid; */
   margin-bottom: 100px;
+  margin-top: -100;
+  display: flex;
+  padding: auto 125px;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .main-info-for-tp > h3 {
-  text-align: center;
-  top: -26px;
-  
+  /* border: 4px;
+  border-style: solid; */
+  padding: 40px 344px;
+  background-color: #635985;
 }
 
-  /* <---------------End Topseller--------------> */
-  
+/* <---------------End Topseller--------------> */
+
 .promotion {
   background-color: #ffffff;
   background-position: center;
@@ -302,72 +306,135 @@
 
 .pm {
   text-align: center;
-  background-color: #BFDB38;
+  background-color: #bfdb38;
   border: 2px;
   border-style: solid;
   border-color: black;
   border-radius: 15px;
-  margin: auto 100px;  
+  margin: auto 100px;
   margin-top: 50px;
   margin-bottom: 50px;
   padding: 10px;
 }
+.promotion-picture {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.promotion-p1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
 
+.promotion-text {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
 .exmarks {
   font-family: Karantina;
   font-size: 6rem;
 }
 
 /* <---------------End Promotion--------------> */
-  
+
 footer {
   background-color: #0542c7;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  text-align: center;
+  padding-bottom: 150px;
+  padding-top: 50px;
 }
-  
+
+.line {
+  width: 10cm;
+  height: 2px;
+  background-color: white;
+}
+
+.footer-about-us {
+  color: rgb(248, 248, 248);
+}
+
+.footer-about-us > h3 {
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
+
+.footer-our-team {
+  color: rgb(248, 248, 248);
+}
+
+.footer-our-team > h3 {
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
+
+.footer-contact {
+  color: rgb(248, 248, 248);
+}
+.footer-contact > h3 {
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
+.footer-contact > img {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.number {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+.number > img {
+  margin-left: 5px;
+}
+
 .exmarks {
   font-family: Karantina;
   font-size: 6rem;
 }
 
 /* <---------------End everthing :D --------------> */
-  
+
 /* |Down here is my note| */
 
 /* .image1 {
-    position: absolute;
-    top: ;
-    left: ;
-    border: 1px solid #000000;
+  position: absolute;
+  top: ;
+  left: ;
+  border: 1px solid #000000;
 }
 .image2 {
-    position: relative;
-    top: 487px;
-    left: 0px;
-    border: 1px solid #000000;
-    width: ;
-}
-
-image is how to make a image side in css 
-
-border: 4px;
-    border-style: solid;
-    border-color: red;
-
-border-radius: 30px;
-
-border here show a way to use a border that i might forgot
-
-.info-text{
-  text-align: center;
-  background: rgba(255, 255, 255, 0.685);
-  margin: auto 450px;
-  padding: 25px;
-  border-radius: 40px;
   position: relative;
-  top: -191px;
-  left: 191px;
+  top: 487px;
+  left: 0px;
+  border: 1px solid #000000;
+  width: ;
 }
-
+image is how to make a image side in css 
+border: 4px;
+  border-style: solid;
+  border-color: red;
+border-radius: 30px;
+border here show a way to use a border that i might forgot
+.info-text{
+text-align: center;
+background: rgba(255, 255, 255, 0.685);
+margin: auto 450px;
+padding: 25px;
+border-radius: 40px;
+position: relative;
+top: -191px;
+left: 191px;
+}
 info-text show how to make a text to be on top of any picture
-
 */
